--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -100,7 +100,7 @@
     margin-bottom: 50px;
   }
   &:last-child{
-    @include sm{
+    @include rmaxwd(991){
       margin-bottom: 0;
     }
   }
